--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -1,11 +1,4 @@
-<ul class="nav nav-tabs">
-<li><a href="/courses">Courses</a></li>
-<li><a href="/golfers">Golfers</a></li>
-<li class="active"><a href="/matches">Matches</a></li>
-<li><a href="/scores">Scores</a></li>
-</ul>
-
-<h3>New Match</h3>
+<h1>New match</h1>
 
 <%= render 'form' %>
 
