--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -1936,6 +1936,7 @@ table {
 
 .table thead th {
   vertical-align: bottom;
+  text-align: left; 
 }
 
 .table caption + thead tr:first-child th,
@@ -5948,4 +5949,3 @@ article {
 #duo {
 	background:url(../img/duo.jpg);
 }
-
