--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -16,24 +16,16 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :par %><br>
-    <%= f.number_field :par %>
+    <%= f.label :location %><br>
+    <%= f.text_field :location %>
   </div>
   <div class="field">
-    <%= f.label :location %><br>
-    <%= f.text_area :location %>
+    <%= f.label :par %><br>
+    <%= f.text_field :par %>
   </div>
   <div class="field">
     <%= f.label :tees %><br>
     <%= f.text_field :tees %>
-  </div>
-  <div class="field">
-    <%= f.label :slope %><br>
-    <%= f.number_field :slope %>
-  </div>
-  <div class="field">
-    <%= f.label :rating %><br>
-    <%= f.number_field :rating %>
   </div>
   <div class="actions">
     <%= f.submit %>
