--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,27 +1,12 @@
-<html lang="en">
-
-<body>
-<p />
-<ul class="nav nav-tabs">
-<li class="active"><a href="/courses">Courses</a></li>
-<li><a href="/golfers">Golfers</a></li>
-<li><a href="/matches">Matches</a></li>
-<li><a href="/scores">Scores</a></li>
-</ul>
-
-<section>
-
 <h3>Courses</h3>
 
-<table class="table table-striped">
+<table>
   <thead>
     <tr>
       <th>Name</th>
-      <th>Par</th>
       <th>Location</th>
+      <th>Par</th>
       <th>Tees</th>
-      <th>Slope</th>
-      <th>Rating</th>
       <th>Holes</th>
     </tr>
   </thead>
@@ -30,20 +15,17 @@
     <% @courses.each do |course| %>
       <tr>
         <td><%= link_to course.name, course %></td>
-        <td><%= course.par %></td>
         <td><%= course.location %></td>
+        <td><%= course.par %></td>
         <td><%= course.tees %></td>
-        <td><%= course.slope %></td>
-        <td><%= course.rating %></td>
 	<td><%= course.holes.count %></td>
-        <td><%= link_to 'Edit', edit_course_path(course) %>
-	| <%= link_to 'Destroy', course, method: :delete, date: {confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', course %> | 
+        <%= link_to 'Edit', edit_course_path(course) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to 'Add Course', new_course_path, :class => 'btn btn-info btn-small' %>
-<p />
-</body>
-</html>
+<br>
+
+<%= link_to 'New Course', new_course_path %>
