--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,15 +1,3 @@
-<html lang="en">
-
-<body>
-<p />
-<ul class="nav nav-tabs">
-<li class="active"><a href="../courses">Courses</a></li>
-<li><a href="../golfers">Golfers</a></li>
-<li><a href="../matches">Matches</a></li>
-<li><a href="../scores">Scores</a></li>
-
-</ul>
-
 <section>
 <p id="notice"><%= notice %></p>
 
@@ -32,19 +20,9 @@
   <%= @course.tees %>
 </p>
 
-<p>
-  <strong>Slope:</strong>
-  <%= @course.slope %>
-</p>
-
-<p>
-  <strong>Rating:</strong>
-  <%= @course.rating %>
-</p>
 <!-- Hole Listing -->
 
-<table border="1">
-
+<table class="table table-bordered">
 <tr><td>Hole #</td><% @course.holes.each do |c| %>
 <td><strong><%= c.hole_number %><% end %></strong></td>
 </tr><br>
@@ -58,7 +36,8 @@
 </tr><br>
 
 <tr><td>Yardage</td><% @course.holes.each do |c| %>
-<td><%= c.yardage %><% end %></td>
+<td><%= c.yardage %><% end %>
+</td>
 </tr><br>
 </table>
 
