--- a/app/views/golfers/index.html.erb
+++ b/app/views/golfers/index.html.erb
@@ -1,18 +1,6 @@
-<html lang="en">
-
-<body>
-<p />
-<ul class="nav nav-tabs">
-<li><a href="../courses">Courses</a></li>
-<li class="active"><a href="../golfers">Golfers</a></li>
-<li><a href="../matches">Matches</a></li>
-<li><a href="../scores">Scores</a><li>
-</ul>
-
-<section>
 <h3>Golfers</h3>
 
-<table class="table table-striped">
+<table>
   <thead>
     <tr>
       <th>Name</th>
@@ -20,12 +8,13 @@
     </tr>
   </thead>
 
+  <tbody>
     <% @golfers.each do |golfer| %>
       <tr>
         <td><%= link_to golfer.name, golfer %></td>
         <td><%= golfer.handicap %></td>
-        <td><%= link_to 'Edit', edit_golfer_path(golfer) %> | 
-        <%= link_to 'Destroy', golfer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', golfer %> | 
+        <%= link_to 'Edit', edit_golfer_path(golfer) %></td>
       </tr>
     <% end %>
   </tbody>
@@ -33,7 +22,4 @@
 
 <br>
 
-<%= link_to 'New Golfer', new_golfer_path, :class => 'btn btn-info btn-small' %>
-<p />
-</body>
-</html>
+<%= link_to 'New Golfer', new_golfer_path %>
