--- a/app/views/golfers/new.html.erb
+++ b/app/views/golfers/new.html.erb
@@ -1,10 +1,4 @@
-<ul class="nav nav-tabs">
-<li><a href="../courses">Courses</a></li>
-<li class="active"><a href="../golfers">Golfers</a></li>
-<li><a href="../matches">Matches</a></li>
-</ul>
-
-<h3>New golfer</h3>
+<h3>New Golfer</h3>
 
 <%= render 'form' %>
 
