--- a/app/views/matches/edit.html.erb
+++ b/app/views/matches/edit.html.erb
@@ -1,13 +1,4 @@
-<ul class="nav nav-tabs">
-<li><a href="/courses">Courses</a></li>
-<li><a href="/golfers">Golfers</a></li>
-<li class="active"><a href="/matches">Matches</a></li>
-<li><a href="/scores">Scores</a></li>
-</ul>
-
-<p />
-
-<h3>Edit Match</h3>
+<h1>Editing match</h1>
 
 <%= render 'form' %>
 
