--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,34 +1,29 @@
-<ul class="nav nav-tabs">
-<li><a href="../courses">Courses</a></li>
-<li><a href="../golfers">Golfers</a></li>
-<li class="active"><a href="../matches">Matches</a></li>
-<li><a href="../scores">Scores</a></li>
-</ul>
 <h3>Matches</h3>
 
-<table class="table table-striped">
+<table>
   <thead>
     <tr>
       <th>Name</th>
       <th>Golfer 1</th>
       <th>Golfer 2</th>
-      <th>Course</th>
-      <th>Winner</th>
       <th>Score</th>
+      <th>Winner</th>
+      <th>Course</th>
     </tr>
   </thead>
 
   <tbody>
     <% @matches.each do |match| %>
       <tr>
-        <td><%= link_to match.name, match %></td>
+        <td><%= link_to match.name, name %></td>
         <td><%= match.golfer1 %></td>
         <td><%= match.golfer2 %></td>
-        <td><%= match.course_id %></td>
         <td><%= match.score %></td>
         <td><%= match.winner %></td>
-        <td><%= link_to 'Edit', edit_match_path(match) %> | 
-        <%= link_to 'Destroy', match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= match.course %></td>
+        <td><%= link_to 'Show', match %></td>
+        <td><%= link_to 'Edit', edit_match_path(match) %></td>
+        <td><%= link_to 'Destroy', match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -37,4 +32,3 @@
 <br>
 
 <%= link_to 'New Match', new_match_path %>
-<p />
