--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,79 +1,34 @@
-<ul class="nav nav-tabs">
-<li><a href="/courses">Courses</a></li>
-<li><a href="/golfers">Golfers</a></li>
-<li class="active"><a href="/matches">Matches</a></li>
-<li><a href="/scores">Scores</a></li>
-</ul>
-
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong><%= @match.golfer1 %></strong> vs. <strong><%= @match.golfer2 %></strong>
+  <strong>Name:</strong>
+  <%= @match.name %>
 </p>
+
 <p>
-  <strong>Course:</strong>
-  <%= @match.course %>
+  <strong>Golfer 1:</strong>
+  <%= @match.golfer1 %>
 </p>
+
+<p>
+  <strong>Golfer 2:</strong>
+  <%= @match.golfer2 %>
+</p>
+
 <p>
   <strong>Score:</strong>
   <%= @match.score %>
 </p>
+
 <p>
   <strong>Winner:</strong>
   <%= @match.winner %>
 </p>
+
 <p>
-<table class="table table-striped" border="1">
-<tr><td>Hole #</td><% @match.course_id.holes.each do |c| %>
-<td><strong><%= c.hole_number %><% end %></strong></td>
-</tr><br>
-
-<tr><td >Par</td><% @match.course.holes.each do |c| %>
-<td><%= c.par %><% end %></td>
-</tr><br>
-
-<tr><td>Handicap</td><% @match.course.holes.each do |c| %>
-<td><%= c.handicap %><% end %></td>
-</tr><br>
-
-<tr><td>Yardage</td><% @match.course.holes.each do |c| %>
-<td><%= c.yardage %><% end %></td>
-</tr><br>
-
-<tr><td><%= @match.golfer1 %> </td>
-<% @match.course.holes.count.times do |l| %>
-<td><select name="hole_score" id="" class="form-control">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-	    <option value="10">10</option>
-            <option value="max">M</option>
-</select></td><% end %>
-</tr>
-
-<tr><td><%= @match.golfer2 %></td>
-<% @match.course.holes.count.times do |l| %>
-<td><select name="hole_score" id="" class="form-control"> 
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-	    <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-	    <option value="10">10</option>
-            <option value="max">M</option>
-</select></td><% end %>
-</tr>
-</table> 
+  <strong>Course:</strong>
+  <%= @match.course %>
+</p>
 
 <%= link_to 'Edit', edit_match_path(@match) %> |
 <%= link_to 'Back', matches_path %>
