--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,12 +1,3 @@
-<p />
-<ul class="nav nav-tabs">
-<li><a href="../courses">Courses</a></li>
-<li><a href="../golfers">Golfers</a></li>
-<li><a href="../matches">Matches</a></li>
-<li class="active"><a href="../scores">Scores</a></li>
-</ul>
-
-<div ="container">
 <h3>Scores</h3>
 
 <table>
@@ -22,8 +13,7 @@
   <tbody>
     <% @scores.each do |score| %>
       <tr>
-        <td><%= score.golfer1_id.name %></td>
-        <td><%= score.golfer2_id.name %></td>
+        <td><%= score.golfer_id %></td>
         <td><%= score.hole_id %></td>
         <td><%= score.match_id %></td>
         <td><%= score.score %></td>
@@ -38,5 +28,3 @@
 <br>
 
 <%= link_to 'New Score', new_score_path %>
-<p />
-</div>
