--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,34 +1,23 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @match.name %>
+  <h3><em><%= @match.name %></em></h3>
 </p>
 
 <p>
-  <strong>Golfer 1:</strong>
-  <%= @match.golfer1 %>
+<h3><%= @match.golfer1 %> vs. <%= @match.golfer2 %>
+</h3>
+at <strong><%= @match.course.name %></strong>
 </p>
-
-<p>
-  <strong>Golfer 2:</strong>
-  <%= @match.golfer2 %>
+<p><strong>Score:</strong>
+<table class="table table-striping"><tr>
+<td></td><tr></table>
 </p>
-
-<p>
-  <strong>Score:</strong>
-  <%= @match.score %>
-</p>
-
 <p>
   <strong>Winner:</strong>
   <%= @match.winner %>
 </p>
 
-<p>
-  <strong>Course:</strong>
-  <%= @match.course %>
-</p>
 
 <%= link_to 'Edit', edit_match_path(@match) %> |
 <%= link_to 'Back', matches_path %>
