--- a/app/views/matches/_form.html.erb
+++ b/app/views/matches/_form.html.erb
@@ -16,24 +16,16 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :golfer1 %><br>
-    <%= f.text_field :golfer1 %>
-  </div>
+    <%= f.label 'Golfer 1' %><br>
+<%= collection_select(:match, :golfer1, Golfer.all, :name, :name) %>
+</div>
   <div class="field">
-    <%= f.label :golfer2 %><br>
-    <%= f.text_field :golfer2 %>
-  </div>
-  <div class="field">
-    <%= f.label :score %><br>
-    <%= f.number_field :score %>
-  </div>
-  <div class="field">
-    <%= f.label :winner %><br>
-    <%= f.text_field :winner %>
+    <%= f.label 'Golfer 2' %><br>
+<%= collection_select(:match, :golfer2, Golfer.all, :name, :name) %>  
   </div>
   <div class="field">
     <%= f.label :course %><br>
-    <%= f.text_field :course %>
+ <%= collection_select(:match, :course_id, Course.all, :id, :name) %>
   </div>
   <div class="actions">
     <%= f.submit %>
