--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -11,7 +11,8 @@ at <strong><%= @match.course.name %></strong>
 </p>
 <p><strong>Score:</strong>
 <table class="table table-striping"><tr>
-<td></td><tr></table>
+<td><%= @match.course.holes.each do |s| %><%= s.yardage %></td>
+<td><%= s.par %><% end %></td></table>
 </p>
 <p>
   <strong>Winner:</strong>
