--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -23,7 +23,7 @@
 <!-- Hole Listing -->
 
 <table class="table table-bordered">
-<tr><td>Hole #</td><%= @course.holes.each do |c| %>
+<tr><td>Hole #</td><% @course.holes.each do |c| %>
 <td><%= c.hole_number %><% end %></td>
 </tr><br>
 
