updates matches show page

--- a/app/views/golfers/show.html.erb
+++ b/app/views/golfers/show.html.erb
@@ -11,4 +11,5 @@
 </p>
 
 <%= link_to 'Edit', edit_golfer_path(@golfer) %> |
-<%= link_to 'Back', golfers_path %>
+<%= link_to 'Back', golfers_path %> |
+<%= link_to 'New Golfer', new_golfer_path %>
