--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= match.golfer1.name %></td>
         <td><%= match.golfer2.name %></td>
 	<td><%= match.course.name %></td>
-        <td><%= match.score %></td>
+        <td><%= match.result %></td>
         <td><%= match.winner %></td>
         <td><%= link_to 'Show', match %> 
         | <%= link_to 'Edit', edit_match_path(match) %> | 
