--- a/app/views/scores/show.html.erb
+++ b/app/views/scores/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Score:</strong>
-  <%= @score.score %>
+  <%= @score.stroke %>
 </p>
 
 <%= link_to 'Edit', edit_score_path(@score) %> |
