--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -7,7 +7,7 @@
       <th>Golfer 1</th>
       <th>Golfer 2</th>
       <th>Course</th>
-      <th>Score</th>
+      <th>Result</th>
       <th>Winner</th>
     </tr>
   </thead>
@@ -19,8 +19,8 @@
         <td><%= match.golfer1.name %></td>
         <td><%= match.golfer2.name %></td>
 	<td><%= match.course.name %></td>
+        <td><%= match.score %></td>
         <td><%= match.result %></td>
-        <td><%= match.winner %></td>
         <td><%= link_to 'Show', match %> 
         | <%= link_to 'Edit', edit_match_path(match) %> | 
         <%= link_to 'Destroy', match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
