--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -3,18 +3,16 @@
 <p>
   <h3><em><%= @match.name %></em></h3>
 </p>
-
 <p>
 <h3><%= Golfer.find(@match.golfer1).name %> vs. <%= @match.golfer2.name %>
 </h3>
 at <strong><%= @match.course.name %></strong>
-</p>
-<p><strong>Score:</strong>
-<table class="table table-bordered"><tr>
 
+<table class="table zebra-striping"><tr>
+<th colspan"9"><strong><center>Course Info</center></strong></th>
 <tr><td><strong>Hole #</strong></td><% @match.course.holes.each do |s| %>
 <td><%= s.hole_number %><% end %></td>
-</tr><br>
+<br>
 
 <tr><td><strong>Par</strong></td><% @match.course.holes.each do |s| %>
 <td><%= s.par %><% end %></td>
@@ -24,46 +22,46 @@ at <strong><%= @match.course.name %></strong>
 <td><%= s.handicap %><% end %></td>
 </tr>
 <br>
+<p>
+  <strong>Winner:</strong>
+</p>
+<br>
 
 <tr><td><strong>Yardage</strong></td><% @match.course.holes.each do |s| %>
 <td><%= s.yardage %><% end %>
 </td>
-<tr><td><strong><%= Golfer.find(@match.golfer1).name %></strong></td>
-<% @match.course.holes.each do |s| %>
-<td>
-<div class ="field">
-<select name="hole_score" id="" class="form-control" style="width: 68px;">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-	    <option value="10">10</option>
-            <option value="max">M</option>
-</select></td><% end %>
-</div>
-</td>
-</tr>
-<tr><td><strong><%= Golfer.find(@match.golfer2).name %></strong></td>
-<% @match.course.holes.each do |s| %>
-<td>
-<% form_for([@match, @match.scores.build]) do |n| %>
-  <%= n.select(:stroke, options_for_select((10..100).step(10).to_a.map{|s| ["#{s}%", s]})) %>
-<% end %>
-</td><% end %>
-</div>
 </tr>
 </table>
 </p>
-<p>
-  <strong>Winner:</strong>
-  <%= @match.winner %>
+<table border="2">
+<%= form_for ([@match, @match.scores.build]) do |f| %>
+<tr>
+<td>
+<strong>Golfer:</strong></td>
+<td>
+<%= f.select :golfer_id, Golfer.all.collect {|c| [c.name, c.id]} %>
+</td></tr>
+<tr><td>
+  <strong>Hole:</strong></td>
+<td>
+<%= f.select(:hole_id, options_for_select((1..18).step(1).to_a.map{|h| ["#{h}", h]})) %>
+</td></tr>
+</p>
+<tr class="info"><td>
+<strong>Strokes:</strong></td>
+<td>
+<%= f.select(:stroke, options_for_select((1..11).step(1).to_a.map{|s| ["#{s}", s]})) %>
+</td></tr>
+<tr><td>
+<%= f.submit %></td>
+</tr>
+</table>
+<% end %>
 </p>
 
 
 <%= link_to 'Edit', edit_match_path(@match) %> |
 <%= link_to 'Back', matches_path %>
+<p />
+</body>
+</html>
