--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,25 +1,22 @@
 <h3>Scores</h3>
 
-<table>
+<table class="table table-striping">
   <thead>
     <tr>
-      <th>Golfer</th>
+ <th>Match</th>      
+<th>Golfer</th>
       <th>Hole</th>
-      <th>Match</th>
       <th>Score</th>
     </tr>
   </thead>
 
   <tbody>
-    <% @scores.each do |score| %>
+    <% @scores.each do |s| %>
       <tr>
-        <td><%= score.golfer_id %></td>
-        <td><%= score.hole_id %></td>
-        <td><%= score.match_id %></td>
-        <td><%= score.stroke %></td>
-        <td><%= link_to 'Show', score %> |
-        <%= link_to 'Edit', edit_score_path(score) %></td>
-        <td><%= link_to 'Destroy', score, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	<td><%= s.match_id %></td>
+        <td><%= s.golfer_id %></td>
+        <td><%= s.hole_id %></td>
+        <td><%= s.stroke %></td>
       </tr>
     <% end %>
   </tbody>
@@ -27,4 +24,3 @@
 
 <br>
 
-<%= link_to 'New Score', new_score_path %>
