--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -22,7 +22,7 @@
 
 <!-- Hole Listing -->
 
-<table class="table table-bordered">
+<table id="scores" class="table table-bordered">
 <tr><td>Hole #</td><% @course.holes.each do |c| %>
 <td><%= c.hole_number %><% end %></td>
 </tr><br>
