--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -15,7 +15,7 @@
   <tbody>
     <% @courses.each do |course| %>
       <tr>
-        <td><%= link_to course.name, course, :class => 'btn btn-success' %></td>
+        <td><%= link_to course.name, course, :class => 'btn btn-urgent' %></td>
         <td><%= course.location %></td>
         <td><%= course.par %></td>
         <td><%= course.tees %></td>
